--- a/ADSAP/templates/datos_personales.html
+++ b/ADSAP/templates/datos_personales.html
@@ -1,5 +1,5 @@
 {% extends 'base/base.html'%}
-{% block title %}Noticiaticias{% endblock title %}
+{% block title %}Datos Personales{% endblock title %}
 {% block content %}
 <style>
   body {
