--- a/ADSAP/templates/vacaciones_confirmacion.html
+++ b/ADSAP/templates/vacaciones_confirmacion.html
@@ -1,83 +1,66 @@
+{% extends 'base/base.html'%}
 {% load static %}
-<!DOCTYPE html>
-<html lang="es">
+{% block title %}Vacaciones registradas{% endblock title %}
+{% block content %}
+<style>
+  .background {
+    background-color: #fff;
+  }
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Formulario enviado</title>
-  <style>
-    .background {
-      background-color: #dadada;
-      margin: 0;
-    }
+  .Contenedor {
+    background-color: #fff;
+    padding-top: 150px;
+    padding-left: 25px;
+    padding-right: 25px;
+    height: 700px;
+    width: 700px;
+    border-radius: 20px;
+    margin-left: 450px;
+    display: block;
+  }
 
-    header {
-      background-color: #003366;
-      padding: 20px;
-      will-change: 100%;
-      text-align: left;
-      margin-bottom: 85px;
-    }
+  img {
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    height: 200px;
+    width: 200px;
+    display: block;
+    padding-bottom: 10px;
+  }
 
-    .Logo {
-      color: #fff;
-      font-size: 30px;
-      font-weight: bold;
-      font-family: 'ZCOOL QingKe HuangYou';
-    }
+  .Tittle {
+    font-size: 2em;
+    font-weight: bold;
+    font-family: 'ZCOOL QingKe HuangYou';
+    text-align: center;
+    margin-bottom: 10px;
+  }
 
-    .Contenedor {
-      background-color: #fff;
-      padding-top: 10px;
-      padding-left: 25px;
-      padding-right: 25px;
-      height: 500px;
-      width: 600px;
-      border-radius: 20px;
-      margin-left: auto;
-      margin-right: auto;
-      display: block;
-    }
+  .Instrucciones {
+    font-size: 1.5em;
+    font-family: 'ZCOOL QingKe HuangYou';
+    text-align: justify;
+  }
 
-    img {
-      margin-top: 20px;
-      margin-left: auto;
-      margin-right: auto;
-      height: 200px;
-      width: 200px;
-      display: block;
-      padding-bottom: 10px;
-    }
-
-    .Tittle {
-      font-size: 2em;
-      font-weight: bold;
-      font-family: 'ZCOOL QingKe HuangYou';
-      text-align: center;
-      margin-bottom: 10px;
-    }
-
-    .Instrucciones {
-      font-size: 1em;
-      font-family: 'ZCOOL QingKe HuangYou';
-      text-align: justify;
-    }
-  </style>
+  .btn{
+    background-color: #003366;
+    border-color: #003366;
+    font-size: 1.5em;
+  }
+</style>
 
 <body class="background">
-  <header>
-    <div class="Logo">ADSAP</div>
-  </header>
 
   <div class=Contenedor>
-    <img src="https://cdn-icons-png.flaticon.com/256/488/488454.png">
+    <img src="https://cdn-icons-png.flaticon.com/256/661/661513.png">
     <p class="Tittle">¡Solicitud creada exitosamente!</p>
     <p class="Instrucciones">
-        Tu solicitud ha sido enviada exitosamente. En breve, un administrador revisará tu solicitud y te notificará si ha sido aprobada o rechazada.
-        Ahora puedes regresar a la pagina de vacaciones y ver el estado de tu solicitud.
+      Tu solicitud ha sido enviada exitosamente. En breve, un administrador revisará tu solicitud y te notificará si ha
+      sido aprobada o rechazada.
+      Ahora puedes regresar a la pagina de vacaciones y ver el estado de tu solicitud.
     </p>
-    <a href="{% url 'core:vacaciones' %}" class="btn btn-primary">Regresar</a>
+    <a href="{% url 'core:vacaciones' %}" class="btn btn-primary w-100 py-2">Regresar</a>
   </div>
 </body>
-</head>
+{% endblock content %}
