vacations with filter

--- a/ADSAP/templates/noticia_filter.html
+++ b/ADSAP/templates/noticia_filter.html
@@ -115,6 +115,6 @@
       </div>
       {% endfor %}
     </div>
-    <a class="btn btn-primary py-2 Btn1" type="submit" href="{% url 'core:noticias' %}">Volver a noticias</a>
+    <a class="btn btn-primary py-2 Btn1" href="{% url 'core:noticias' %}">Volver a noticias</a>
 </body>
 {% endblock content %}
