--- a/ADSAP/templates/vacaciones_eliminacion.html
+++ b/ADSAP/templates/vacaciones_eliminacion.html
@@ -1,26 +1,72 @@
 {% extends 'base/base.html'%}
-
-{% block title %} ELIMINACION DE VACACIONES {% endblock title %}
-
+{% load static %}
+{% block title %}Confirmar eliminación{% endblock title %}
 {% block content %}
+<style>
+  .background {
+    background-color: #fff;
+  }
 
-    
+  .Contenedor {
+    background-color: #fff;
+    padding-top: 150px;
+    padding-left: 25px;
+    padding-right: 25px;
+    height: 700px;
+    width: 700px;
+    border-radius: 20px;
+    margin-left: 450px;
+    display: block;
+  }
 
-    {% if not estado_solicitud.estado == "Aceptado" %}  
-        <h1>ELIMINACION DE VACACIONES </h1>
-        <h2>¿Estás seguro de que deseas eliminar la solicitud de vacaciones?
-            Esto cancelara la solicitud automaticamente y no podra ser recuperada.
-        </h2>
-        <form action="" method="post" class="form">
-            {% csrf_token %}
-                <button type="submit" class="btn btn-outline-danger form-control">Eliminar</button>   
-        </form>
-        <a href="{% url 'core:vacaciones' %}" class="btn btn-primary">Regresar</a>
+  img {
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    height: 200px;
+    width: 200px;
+    display: block;
+    padding-bottom: 10px;
+  }
+
+  .Tittle {
+    font-size: 2em;
+    font-weight: bold;
+    font-family: 'ZCOOL QingKe HuangYou';
+    text-align: center;
+    margin-bottom: 10px;
+  }
+
+  .Instrucciones {
+    font-size: 1.5em;
+    font-family: 'ZCOOL QingKe HuangYou';
+    text-align: justify;
+  }
+
+  .btn {
+    background-color: #003366;
+    border-color: #003366;
+    font-size: 1.5em;
+  }
+</style>
+
+<body class="background">
+
+  <div class=Contenedor>
+
+    {% if not estado_solicitud.estado == "Aceptado" %}
+    <h1>ELIMINACION DE VACACIONES </h1>
+    <h2>¿Estás seguro de que deseas eliminar la solicitud de vacaciones?
+      Esto cancelara la solicitud automaticamente y no podra ser recuperada.
+    </h2>
+    <form action="" method="post" class="form">
+      {% csrf_token %}
+      <button type="submit" class="btn btn-outline-danger form-control">Eliminar</button>
+    </form>
+    <a href="{% url 'core:vacaciones' %}" class="btn btn-primary">Regresar</a>
     {% else %}
-        <p>NO PUEDES CANCELAR TU SOLICITUD PORQUE YA SE ACEPTO</p>
+    <p>NO PUEDES CANCELAR TU SOLICITUD PORQUE YA SE ACEPTO</p>
     {% endif %}
-
-
-
-    
+  </div>
+</body>
 {% endblock content %}
