vista de administrador y CRUD emleados desde vista admin

--- a/ADSAP/templates/RH/index_rh.html
+++ b/ADSAP/templates/RH/index_rh.html
@@ -78,22 +78,22 @@
 <body>
   <h2
     style="font-size: 70px; margin-top: 6rem; margin-bottom: 3rem; color:#003366; font-family: 'ZCOOL QingKe HuangYou'; font-weight: bold;">
-    ¡Bienvenido a ADSAP USUARIO DE ADMINISTRADOW UWU!</h2>
+    ¡Bienvenido a ADSAP USUARIO DE ADMINISTRADOR!</h2>
   <div class="container marketing">
     <div class="row">
       <div class="col-lg-4">
         <p>
-          <a class="btn btn-secondary btn-image" href="{% url 'core:datos_personales' %}">
+          <a class="btn btn-secondary btn-image" href="{% url 'RH:empleados' %}">
             <img src="https://cdn-icons-png.flaticon.com/256/1077/1077063.png" alt="Datos Personales">
-            <span style="margin-top: -2px; font-size: 1.7em; font-weight: bold;"></span>
+            <span style="margin-top: -2px; font-size: 1.7em; font-weight: bold;">ADMINISTRAR EMPLEADOS</span>
           </a>
         </p>
       </div>
       <div class="col-lg-4">
         <p>
-          <a class="btn btn-secondary btn-image" href="{% url 'core:vacaciones' %}">
+          <a class="btn btn-secondary btn-image" href="#">
             <img src="https://cdn-icons-png.flaticon.com/256/1831/1831534.png" alt="Vacaciones">
-            <span style="margin-top: -2px; font-size: 1.7em; font-weight: bold;">Vacaciones</span>
+            <span style="margin-top: -2px; font-size: 1.7em; font-weight: bold;">ADMINISTRAR VACACIONES</span>
           </a>
         </p>
       </div>
@@ -101,7 +101,7 @@
         <p>
           <a class="btn btn-secondary btn-image" href="#">
             <img src="https://cdn-icons-png.flaticon.com/256/2284/2284211.png" alt="Permisos">
-            <span style="margin-top: -2px; font-size: 1.7em; font-weight: bold;">Permisos</span>
+            <span style="margin-top: -2px; font-size: 1.7em; font-weight: bold;">ADMINISTRAR PERMISOS</span>
           </a>
         </p>
       </div>
@@ -111,15 +111,15 @@
         <p>
           <a class="btn btn-secondary btn-image" href="#">
             <img src="https://cdn-icons-png.flaticon.com/256/4540/4540514.png" alt="Incapacidades">
-            <span style="margin-top: -2px; font-size: 1.7em; font-weight: bold;">Incapacidades</span>
+            <span style="margin-top: -2px; font-size: 1.7em; font-weight: bold;">ADMINISTRAR INCAPACIDADES</span>
           </a>
         </p>
       </div>
       <div class="col-lg-4">
         <p>
-          <a class="btn btn-secondary btn-image" href="{% url 'core:noticias' %}">
+          <a class="btn btn-secondary btn-image" href="">
             <img src="https://cdn-icons-png.flaticon.com/256/2886/2886141.png" alt="Noticias">
-            <span style="margin-top: -2px; font-size: 1.7em; font-weight: bold;">Noticias</span>
+            <span style="margin-top: -2px; font-size: 1.7em; font-weight: bold;">ADMINISTRAR NOTICIAS</span>
           </a>
         </p>
       </div>
@@ -127,7 +127,7 @@
         <p>
           <a class="btn btn-secondary btn-image" href="#">
             <img src="https://cdn-icons-png.flaticon.com/256/8290/8290972.png" alt="Nomina">
-            <span style="margin-top: -2px; font-size: 1.7em; font-weight: bold;">Nomina</span>
+            <span style="margin-top: -2px; font-size: 1.7em; font-weight: bold;">ADMINISTRAR NOMINAS</span>
           </a>
         </p>
       </div>
